--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
 
-  <!-- Open Graph (WhatsApp / Facebook / LinkedIn / Telegram / Discord) -->
-  <meta property="og:title" content="AOU GPA Calculator" />
-  <meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
-  <meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-  <meta property="og:image:secure_url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-  <meta property="og:image:type" content="image/png" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+<!-- Open Graph -->
+<meta property="og:title" content="AOU GPA Calculator" />
+<meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+<meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
 
-  <!-- Twitter (X) -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="AOU GPA Calculator" />
-  <meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-  <meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og.png" />
-  <meta name="twitter:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+<!-- Twitter (يفيد لبعض المنصات) -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="AOU GPA Calculator" />
+<meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+<meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
+
 
   <!-- App polish -->
   <link rel="icon" href="aou-logo.png" />
@@ -1347,3 +1345,4 @@
   </script>
 </body>
 </html>
+
