--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
 
-<!-- Open Graph -->
-<meta property="og:title" content="AOU GPA Calculator" />
-<meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
-<meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="AOU GPA Calculator" />
+  <meta property="og:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
+  <meta property="og:site_name" content="AOU GPA Calculator" />
+  <meta property="og:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 
-<!-- Twitter (يفيد لبعض المنصات) -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="AOU GPA Calculator" />
-<meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
-<meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
-
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="AOU GPA Calculator" />
+  <meta name="twitter:description" content="Calculate Current GPA and Forecast Expected GPA on a 4.0 scale." />
+  <meta name="twitter:image" content="https://aou-gpa-calculator.github.io/GPA-Calculator/og-image.png" />
 
   <!-- App polish -->
   <link rel="icon" href="aou-logo.png" />
@@ -730,7 +730,6 @@
         el.style.display = "none";
         el.textContent = "";
       }, 1800);
-      // scroll a bit to ensure it's visible on small screens
       try { el.scrollIntoView({behavior:"smooth", block:"nearest"}); } catch(e){}
     }
 
@@ -886,7 +885,9 @@
       const lang = getLang();
       const active = (location.hash && location.hash.toLowerCase() === "#forecast") ? "forecast" : "current";
 
-      const url = new URL(location.origin + location.pathname);
+      // ثابت لصفحة GitHub Pages (بدون مشاكل لو تغيرت طريقة توليد origin في بعض الحالات)
+      const base = "https://aou-gpa-calculator.github.io/GPA-Calculator/";
+      const url = new URL(base);
       url.hash = active === "forecast" ? "#forecast" : "#current";
       url.searchParams.set("lang", lang);
 
@@ -1345,4 +1346,3 @@
   </script>
 </body>
 </html>
-
