--- a/index.html
+++ b/index.html
@@ -17,15 +17,12 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://aou-gpa-calculator.github.io/GPA-Calculator/" />
 
-  <!-- Fonts (Arabic + English) -->
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;500;700;800;900&display=swap" rel="stylesheet">
 
   <style>
-    /* =========================
-       THEME VARS (Dark default)
-    ========================= */
     :root{
       --bg1:#061b2c;
       --bg2:#0a2b45;
@@ -49,22 +46,15 @@
       --danger:#ff5b5b;
       --ok:#4ee29a;
 
-      --btn:#1c3e5f;
-      --btn2:#163754;
-
       --focus: rgba(246,177,0,.26);
 
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
-      /* toast */
       --toastBorder: rgba(78,226,154,.40);
       --toastBg: rgba(6,27,44,.86);
       --toastText: rgba(210,255,235,.95);
     }
 
-    /* =========================
-       LIGHT THEME OVERRIDES
-    ========================= */
     html[data-theme="light"]{
       --bg1:#f6f8ff;
       --bg2:#eef2ff;
@@ -81,9 +71,6 @@
       --input: rgba(0,0,0,.03);
       --inputBorder: rgba(0,0,0,.12);
 
-      --btn:#eef2ff;
-      --btn2:#e6ebff;
-
       --focus: rgba(246,177,0,.22);
 
       --toastBorder: rgba(16,185,129,.35);
@@ -93,14 +80,11 @@
 
     *{box-sizing:border-box}
 
-    /* =========================
-       TYPOGRAPHY (main bold, normal text normal)
-    ========================= */
     body{
       margin:0;
       min-height:100vh;
       font-family: "Cairo", Arial, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", sans-serif;
-      font-weight: 400; /* النص العادي */
+      font-weight: 400;
       color:var(--text);
       background:
         radial-gradient(900px 420px at 20% 10%, rgba(246,177,0,.13), transparent 60%),
@@ -108,38 +92,20 @@
         linear-gradient(180deg, var(--bg1), var(--bg2));
     }
 
-    /* النصوص العادية */
-    .titleBlock p,
-    .notice,
-    .ruleBox,
-    .panelHeader p,
-    .mini,
-    .chip,
-    .bigCaption{
-      font-weight: 500; /* عادي لكن واضح */
+    /* readability: bold main / normal text normal */
+    .titleBlock p,.notice,.ruleBox,.panelHeader p,.mini,.chip,.bigCaption,.footerText{
+      font-weight: 500;
     }
-
-    /* الكلام الرئيسي Bold */
-    .titleBlock h1,
-    .panelHeader h2,
-    .tab,
-    .btn,
-    .label,
-    .thead,
-    .badge,
-    .bigNumber{
+    .titleBlock h1,.panelHeader h2,.tab,.btn,.label,.thead,.badge,.bigNumber,.footerTitle{
       font-weight: 900;
     }
-
-    /* سطور الجدول */
     .trow{ font-weight: 500; }
-
-    input, select, textarea{ font-weight: 500; }
+    input,select,textarea{ font-weight: 500; }
     input::placeholder{ font-weight: 400; }
 
     .wrap{
       max-width: 1060px;
-      margin: 34px auto 60px;
+      margin: 34px auto 40px;
       padding: 0 16px;
     }
 
@@ -186,7 +152,6 @@
       font-size: 13px;
       white-space: nowrap;
     }
-
     html[data-theme="light"] .chip{
       background: rgba(255,255,255,.65);
       backdrop-filter: blur(6px);
@@ -220,6 +185,7 @@
       box-shadow: 0 10px 26px rgba(246,177,0,.25);
     }
     .btn.gold:hover{ filter: brightness(1.02); }
+
     .btn.danger{
       border-color: rgba(255,91,91,.45);
       background: rgba(255,91,91,.10);
@@ -402,15 +368,11 @@
     }
 
     @media (max-width: 980px){
-      .thead, .trow{
-        grid-template-columns: 110px 120px 140px 1fr;
-      }
+      .thead, .trow{ grid-template-columns: 110px 120px 140px 1fr; }
       .hide-md{ display:none; }
     }
     @media (max-width: 620px){
-      .thead, .trow{
-        grid-template-columns: 110px 1fr;
-      }
+      .thead, .trow{ grid-template-columns: 110px 1fr; }
       .hide-sm{ display:none; }
     }
 
@@ -503,10 +465,48 @@
 
     .printOnly{ display:none; }
 
+    /* Footer (Always English) */
+    .siteFooter{
+      margin-top: 30px;
+      border-top: 1px solid var(--border);
+      background: rgba(255,255,255,.04);
+    }
+    html[data-theme="light"] .siteFooter{
+      background: rgba(255,255,255,.65);
+    }
+    .footerInner{
+      max-width: 1060px;
+      margin: 0 auto;
+      padding: 18px 16px 10px;
+      text-align: center;
+    }
+    .footerTitle{
+      font-size: 14px;
+      margin: 0;
+    }
+    .footerText{
+      margin: 6px 0 0;
+      color: var(--muted);
+      font-size: 12.5px;
+      line-height: 1.6;
+    }
+    .footerBottom{
+      border-top: 1px solid var(--border);
+      padding: 10px 16px;
+      text-align: center;
+      color: var(--muted);
+      font-size: 12px;
+    }
+    .footerLink{
+      color: inherit;
+      text-decoration: underline;
+      text-underline-offset: 3px;
+    }
+
     @media print{
       body{ background:#fff; color:#111; }
       .wrap{ max-width: 100%; margin: 0; padding: 0; }
-      .topbar, .tabs, .notice, .ruleBox, .actions, .btn, .chip { display:none !important; }
+      .topbar, .tabs, .notice, .ruleBox, .actions, .btn, .chip, .siteFooter { display:none !important; }
       .panel{ box-shadow:none; border:1px solid #ddd; background:#fff; }
       .panelHeader{ padding: 12px 12px 0; }
       .content{ padding: 12px; }
@@ -693,21 +693,38 @@
     </section>
   </div>
 
+  <!-- Footer (ALWAYS ENGLISH) -->
+  <footer class="siteFooter">
+    <div class="footerInner">
+      <p class="footerTitle">AOU GPA Calculator</p>
+      <p class="footerText">
+        Built by <strong>Homam Shaaban</strong>. This is a student-built guidance tool and <strong>not</strong> an official university system.
+        <br>
+        Reference: AOU grading scale (A–F) mapped to a 4.0 scale as shown in the project rubric.
+      </p>
+      <p class="footerText">
+        <a class="footerLink" href="#" id="footerTop">Back to top</a>
+      </p>
+    </div>
+    <div class="footerBottom">
+      © <span id="footerYear"></span> AOU GPA Calculator — All rights reserved.
+    </div>
+  </footer>
+
 <script>
 /* =========================
-   AOU Scale (from your image)
+   AOU Scale
 ========================= */
 function aouFromScore(score){
   if (!Number.isFinite(score)) return { letter: "—", points: null };
-  if (score >= 90) return { letter: "A", points: 4.0 };
+  if (score >= 90) return { letter: "A",  points: 4.0 };
   if (score >= 82) return { letter: "B+", points: 3.5 };
-  if (score >= 74) return { letter: "B", points: 3.0 };
+  if (score >= 74) return { letter: "B",  points: 3.0 };
   if (score >= 66) return { letter: "C+", points: 2.5 };
-  if (score >= 58) return { letter: "C", points: 2.0 };
-  if (score >= 50) return { letter: "D", points: 1.0 };
+  if (score >= 58) return { letter: "C",  points: 2.0 };
+  if (score >= 50) return { letter: "D",  points: 1.0 };
   return { letter: "F", points: 0.0 };
 }
-
 function clampScore(v){
   if (!Number.isFinite(v)) return null;
   if (v < 0) return 0;
@@ -840,11 +857,9 @@ const i18n = {
 };
 
 let LANG = localStorage.getItem("site_lang") || "ar";
-
 function t(key){
   return (i18n[LANG] && i18n[LANG][key]) ? i18n[LANG][key] : key;
 }
-
 function $(id){ return document.getElementById(id); }
 
 function setLang(lang){
@@ -870,23 +885,18 @@ function setLang(lang){
 const THEME_KEY = "site_theme";
 
 function applyTheme(theme){
-  const html = document.documentElement;
-  html.setAttribute("data-theme", theme);
+  document.documentElement.setAttribute("data-theme", theme);
   localStorage.setItem(THEME_KEY, theme);
   updateThemeButton();
 }
-
 function getPreferredTheme(){
   const saved = localStorage.getItem(THEME_KEY);
   if(saved === "light" || saved === "dark") return saved;
-  // fallback to system
   return (window.matchMedia && window.matchMedia("(prefers-color-scheme: light)").matches) ? "light" : "dark";
 }
-
 function updateThemeButton(){
   const theme = document.documentElement.getAttribute("data-theme") || "dark";
   const btn = $("btnTheme");
-  // 🌙 when dark, ☀️ when light (so user knows what it is)
   btn.textContent = (theme === "dark") ? "🌙" : "☀️";
   btn.title = (theme === "dark") ? "Dark" : "Light";
 }
@@ -940,10 +950,29 @@ function clearRows(containerId){
   while(c.firstChild) c.removeChild(c.firstChild);
 }
 
+let EXPECTED_AUTOCALC = true;
+let CURRENT_AUTOCALC = true;
+
+function currentRowsData(){
+  return Array.from($("cur_rows").children).map(row=>({
+    code: row.querySelector('[data-act="code"]').value,
+    score: row.querySelector('[data-act="score"]').value === "" ? "" : Number(row.querySelector('[data-act="score"]').value),
+    hours: row.querySelector('[data-act="hours"]').value === "" ? "" : Number(row.querySelector('[data-act="hours"]').value),
+  }));
+}
+function expectedRowsData(){
+  return Array.from($("exp_rows").children).map(row=>({
+    code: row.querySelector('[data-act="code"]').value,
+    score: row.querySelector('[data-act="score"]').value === "" ? "" : Number(row.querySelector('[data-act="score"]').value),
+    hours: row.querySelector('[data-act="hours"]').value === "" ? "" : Number(row.querySelector('[data-act="hours"]').value),
+  }));
+}
+
 function saveState(){
   const state = {
     lang: LANG,
     theme: document.documentElement.getAttribute("data-theme") || "dark",
+    lastTab: localStorage.getItem("last_tab") || "expected",
     current: { rows: currentRowsData(), auto: CURRENT_AUTOCALC },
     expected: {
       baseGpa: getNum("exp_baseGpa"),
@@ -959,10 +988,7 @@ function restoreState(){
   const st = loadState();
   if(!st) return;
 
-  if(st.theme === "light" || st.theme === "dark"){
-    applyTheme(st.theme);
-  }
-
+  if(st.theme === "light" || st.theme === "dark") applyTheme(st.theme);
   if(st.lang) LANG = st.lang;
 
   if(st.expected){
@@ -1011,15 +1037,18 @@ function rowTemplate(data = {}){
     </div>
 
     <div class="cell hide-md">
-      <input data-act="hours" inputmode="numeric" type="number" min="0" step="1" placeholder="${t("placeholderHours")}" value="${hours}">
+      <input data-act="hours" inputmode="numeric" type="number" min="0" step="1"
+        placeholder="${t("placeholderHours")}" value="${hours}">
     </div>
 
     <div class="cell">
-      <input data-act="score" inputmode="decimal" type="number" min="0" max="100" step="0.01" placeholder="${t("placeholderScore")}" value="${score}">
+      <input data-act="score" inputmode="decimal" type="number" min="0" max="100" step="0.01"
+        placeholder="${t("placeholderScore")}" value="${score}">
     </div>
 
     <div class="cell">
-      <input data-act="code" class="codeInput" type="text" placeholder="${t("placeholderCode")}" value="${code}">
+      <input data-act="code" class="codeInput" type="text"
+        placeholder="${t("placeholderCode")}" value="${code}">
     </div>
   `;
   return div;
@@ -1067,15 +1096,15 @@ function updateRowComputed(row){
   const letterEl = row.querySelector('[data-act="letter"]');
 
   if(Number.isFinite(score) && scoreEl.value !== ""){
-    letterEl.textContent = `${gp.letter}`;
+    letterEl.textContent = gp.letter;
   } else {
     letterEl.textContent = "—";
   }
 
   if(Number.isFinite(score) && Number.isFinite(hours) && hoursEl.value !== "" && gp.points !== null){
-    pointsBadge.textContent = `${gp.points.toFixed(1)}`;
+    pointsBadge.textContent = gp.points.toFixed(1);
   } else if (Number.isFinite(score) && gp.points !== null){
-    pointsBadge.textContent = `${gp.points.toFixed(1)}`;
+    pointsBadge.textContent = gp.points.toFixed(1);
   } else {
     pointsBadge.textContent = "—";
   }
@@ -1100,7 +1129,7 @@ function extractRows(containerId){
   const parsed = rows.map((row, idx)=>{
     const code = safeUpper(row.querySelector('[data-act="code"]').value);
     const scoreStr = row.querySelector('[data-act="score"]').value;
-    const hoursStr = row.querySelector('[data-act="hours"]') ? row.querySelector('[data-act="hours"]').value : "";
+    const hoursStr = row.querySelector('[data-act="hours"]').value;
 
     const score = (scoreStr === "") ? NaN : Number(scoreStr);
     const hours = (hoursStr === "") ? NaN : Number(hoursStr);
@@ -1149,6 +1178,7 @@ function computeRowsGpa(containerId){
   for(const p of counted){
     if(!p.code) continue;
     if(!validateRow(p)) return { ok:false };
+
     const sc = clampScore(p.score);
     const gp = aouFromScore(sc);
     totalHours += p.hours;
@@ -1201,9 +1231,6 @@ function recomputeByContainer(containerId){
   if(containerId === "cur_rows") computeCurrent(false);
 }
 
-let EXPECTED_AUTOCALC = true;
-let CURRENT_AUTOCALC = true;
-
 function maybeAutoCalc(containerId){
   if(containerId === "exp_rows" && EXPECTED_AUTOCALC) computeExpected(false);
   if(containerId === "cur_rows" && CURRENT_AUTOCALC) computeCurrent(false);
@@ -1217,21 +1244,6 @@ function refreshAutoCalcButtons(){
 /* =========================
    Export / Import
 ========================= */
-function currentRowsData(){
-  return Array.from($("cur_rows").children).map(row=>({
-    code: row.querySelector('[data-act="code"]').value,
-    score: row.querySelector('[data-act="score"]').value === "" ? "" : Number(row.querySelector('[data-act="score"]').value),
-    hours: row.querySelector('[data-act="hours"]').value === "" ? "" : Number(row.querySelector('[data-act="hours"]').value),
-  }));
-}
-function expectedRowsData(){
-  return Array.from($("exp_rows").children).map(row=>({
-    code: row.querySelector('[data-act="code"]').value,
-    score: row.querySelector('[data-act="score"]').value === "" ? "" : Number(row.querySelector('[data-act="score"]').value),
-    hours: row.querySelector('[data-act="hours"]').value === "" ? "" : Number(row.querySelector('[data-act="hours"]').value),
-  }));
-}
-
 function exportJson(kind){
   const payload = {
     version: 1,
@@ -1302,10 +1314,11 @@ function showPanel(which){
   $("tabCurrent").classList.toggle("active", !isExp);
 
   localStorage.setItem("last_tab", which);
+  saveState();
 }
 
 /* =========================
-   Copy link / Print
+   Copy link
 ========================= */
 async function copyText(text){
   try{
@@ -1326,6 +1339,10 @@ async function copyText(text){
    Init
 ========================= */
 function init(){
+  // footer year + top
+  $("footerYear").textContent = new Date().getFullYear();
+  $("footerTop").addEventListener("click", (e)=>{ e.preventDefault(); window.scrollTo({top:0, behavior:"smooth"}); });
+
   // theme init
   applyTheme(getPreferredTheme());
 
@@ -1406,17 +1423,16 @@ function init(){
   // Print
   $("btnPrint").addEventListener("click", ()=> window.print());
 
-  // First rows
+  // Ensure at least one row
   if($("exp_rows").children.length === 0) addRow("exp_rows");
   if($("cur_rows").children.length === 0) addRow("cur_rows");
 
-  // Restore
+  // Restore saved data
   restoreState();
 
   // Ensure labels
   refreshAutoCalcButtons();
   setLang(LANG);
-  updateThemeButton();
 
   // initial compute
   computeCurrent(false);
