--- a/index.html
+++ b/index.html
@@ -526,9 +526,15 @@
   <div class="wrap">
     <div class="topbar">
       <div class="titleBlock">
-        <h1 data-i18n="appTitle">حاسبة المعدل - الجامعة العربية المفتوحة</h1>
-        <p data-i18n="appSub">تطبيق لحساب المعدل الحالي وتوقع المعدل المتوقع على مقياس 4.0 (وفق سلم AOU)</p>
-      </div>
+  <div class="brand">
+    <img src="./aou-logo.png" alt="Arab Open University" class="logo">
+    <div class="brandText">
+      <h1 data-i18n="appTitle">حاسبة المعدل - الجامعة العربية المفتوحة</h1>
+      <p data-i18n="appSub">تطبيق لحساب المعدل الحالي وتوقع المعدل المتوقع على مقياس 4.0 (وفق سلم AOU)</p>
+    </div>
+  </div>
+</div>
+  
 
       <div class="topActions">
         <span class="chip" id="scaleChip" data-i18n="scaleChip">Scale: 4.0</span>
@@ -1443,3 +1449,4 @@ document.addEventListener("DOMContentLoaded", init);
 </script>
 </body>
 </html>
+
