--- a/index.html
+++ b/index.html
@@ -109,14 +109,13 @@
       padding: 0 16px;
     }
 
-    .topbar{
-      display:flex;
-      align-items:flex-start;
-      justify-content:space-between;
-      gap: 14px;
-      flex-wrap: wrap;
-      margin-bottom: 14px;
-    }
+.topbar{
+  display:grid;
+  grid-template-columns: 1fr auto 1fr;
+  align-items:center;
+  gap: 14px;
+  margin-bottom: 14px;
+}
 
     .titleBlock h1{
       margin:0;
@@ -525,6 +524,34 @@
 
   <div class="wrap">
     <div class="topbar">
+      <div class="topbar">
+
+  <!-- left spacer -->
+  <div></div>
+
+  <!-- center brand -->
+  <div class="titleBlock" style="justify-self:center;">
+    <div class="brand" style="justify-content:center;">
+      <img src="./aou-logo.png" alt="Arab Open University" class="logo">
+      <div class="brandText">
+        <h1 data-i18n="appTitle">AOU GPA Calculator</h1>
+        <p data-i18n="appSub">
+          Calculate current GPA and forecast expected GPA on a 4.0 scale (AOU policy)
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <!-- right actions -->
+  <div class="topActions" style="justify-self:end;">
+    <span class="chip" id="scaleChip">Scale: 4.0</span>
+    <button class="btn" id="btnCopyLink" type="button">Copy link</button>
+    <button class="btn" id="btnTheme" type="button">🌙</button>
+    <button class="btn" id="btnAR" type="button">AR</button>
+    <button class="btn" id="btnEN" type="button">EN</button>
+  </div>
+
+      </div>
       <div class="titleBlock">
   <div class="brand">
     <img src="./aou-logo.png" alt="Arab Open University" class="logo">
@@ -1449,4 +1476,5 @@ document.addEventListener("DOMContentLoaded", init);
 </script>
 </body>
 </html>
+
 
