--- a/index.html
+++ b/index.html
@@ -523,35 +523,32 @@
   <div class="toast" id="toast"></div>
 
   <div class="wrap">
-    <div class="topbar">
-      <div class="topbar">
 
-  <!-- left spacer -->
-  <div></div>
+  <div class="topbar">
 
-  <!-- center brand -->
-  <div class="titleBlock" style="justify-self:center;">
-    <div class="brand" style="justify-content:center;">
-      <img src="./aou-logo.png" alt="Arab Open University" class="logo">
-      <div class="brandText">
-        <h1 data-i18n="appTitle">AOU GPA Calculator</h1>
-        <p data-i18n="appSub">
-          Calculate current GPA and forecast expected GPA on a 4.0 scale (AOU policy)
-        </p>
+    <!-- center brand -->
+    <div class="titleBlock">
+      <div class="brand">
+        <img src="./aou-logo.png" alt="Arab Open University">
+        <div class="brandText">
+          <h1 data-i18n="appTitle">AOU GPA Calculator</h1>
+          <p data-i18n="appSub">
+            Calculate current GPA and forecast expected GPA on a 4.0 scale (AOU policy)
+          </p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- right actions -->
-  <div class="topActions" style="justify-self:end;">
-    <span class="chip" id="scaleChip">Scale: 4.0</span>
-    <button class="btn" id="btnCopyLink" type="button">Copy link</button>
-    <button class="btn" id="btnTheme" type="button">🌙</button>
-    <button class="btn" id="btnAR" type="button">AR</button>
-    <button class="btn" id="btnEN" type="button">EN</button>
-  </div>
+    <!-- actions -->
+    <div class="topActions">
+      <span class="chip" id="scaleChip">Scale: 4.0</span>
+      <button class="btn" id="btnCopyLink">Copy link</button>
+      <button class="btn" id="btnTheme">🌙</button>
+      <button class="btn" id="btnAR">AR</button>
+      <button class="btn" id="btnEN">EN</button>
+    </div>
 
-      </div>
+  </div>
       <div class="titleBlock">
   <div class="brand">
     <img src="./aou-logo.png" alt="Arab Open University" class="logo">
@@ -1476,5 +1473,6 @@ document.addEventListener("DOMContentLoaded", init);
 </script>
 </body>
 </html>
+
 
 
