--- a/index.html
+++ b/index.html
@@ -522,11 +522,11 @@
 <body>
   <div class="toast" id="toast"></div>
 
-  <div class="wrap">
+<div class="wrap">
 
   <div class="topbar">
 
-    <!-- center brand -->
+    <!-- Logo + Title -->
     <div class="titleBlock">
       <div class="brand">
         <img src="./aou-logo.png" alt="Arab Open University">
@@ -539,7 +539,7 @@
       </div>
     </div>
 
-    <!-- actions -->
+    <!-- Actions -->
     <div class="topActions">
       <span class="chip" id="scaleChip">Scale: 4.0</span>
       <button class="btn" id="btnCopyLink">Copy link</button>
@@ -1473,6 +1473,7 @@ document.addEventListener("DOMContentLoaded", init);
 </script>
 </body>
 </html>
+
 
 
 
