--- a/current-gpa.html
+++ b/current-gpa.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=./index.html#current">
+  <meta http-equiv="refresh" content="0; url=index.html#current">
   <script>
-    window.location.replace("./index.html#current");
+    window.location.replace("index.html#current");
   </script>
 </head>
 <body></body>
