Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ function rowTemplate(data = {}){
         
         <div class="cell-code">
             <span class="mobile-label">${LANG==='ar'?'اسم المادة (Code)':'Course Code'}</span>
-            <input type="text" data-act="code" class="code-input" placeholder="GR101" value="${code}">
+            <input type="text" data-act="code" class="code-input" placeholder="ITC..." value="${code}">
         </div>
         
         <div class="cell-status">
