--- a/index.html
+++ b/index.html
@@ -355,12 +355,20 @@
                 <div class="faq-content" data-i18n="a3">No, this is a guidance tool...</div>
             </details>
         </div>
-
-        <div class="footer">Built by Homam Shaaban.</div>
     </div>
 
-    <div class="footer">© <span id="yr"></span> AOU Calculator</div>
-  </div>
+    <div class="footer" style="margin-top: 50px; padding-bottom: 20px;">
+        <div style="margin-bottom: 8px;">
+            © <span id="yr"></span> AOU Calculator | <span style="opacity:0.7">Unofficial Student Initiative</span>
+        </div>
+        <div style="margin-bottom: 4px;">
+            Designed & Developed by: <strong style="color:var(--text); font-size: 13px;">Eng. Homam Ahmad Shaaban</strong>
+        </div>
+        <div style="font-size: 11px; opacity: 0.8;">
+            Under Supervision of the Dean of FCS: <strong>Dr. Omar Abdulkader</strong>
+        </div>
+    </div>
+    </div>
 
 <script>
 let LANG = 'en';
